--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "python.pythonPath": "${workspaceFolder}\\myvenv\\Scripts\\python.exe",
-    "python.linting.pylintEnabled": false
+    "python.linting.pylintEnabled": false,
+    "git.ignoreLimitWarning": true
 }
